delegateCall/autograder/sample/student1/results.txt

Using network 'development'.


Compiling your contracts...
===========================
> Compiling ./test/attacker_test.sol

    > compilation warnings encountered:

/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/Migrations.sol:7:3: Warning: Defining constructors as functions with the same name as the contract is deprecated. Use "constructor(...) { ... }" instead.
  function Migrations() public {
  ^ (Relevant source part starts here and spans across multiple lines).
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/auction.sol:9:5: Warning: Defining constructors as functions with the same name as the contract is deprecated. Use "constructor(...) { ... }" instead.
    function auction() public onlyUninitialised {
    ^ (Relevant source part starts here and spans across multiple lines).
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/attacker.sol:8:5: Warning: Defining constructors as functions with the same name as the contract is deprecated. Use "constructor(...) { ... }" instead.
    function attacker() public payable {}
    ^-----------------------------------^
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/user.sol:8:5: Warning: Defining constructors as functions with the same name as the contract is deprecated. Use "constructor(...) { ... }" instead.
    function user() public payable {}
    ^-------------------------------^
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/auction.sol:9:31: Warning: Modifier-style base constructor call without arguments.
    function auction() public onlyUninitialised {
                              ^---------------^
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/test/attacker_test.sol:37:9: Warning: Invoking events without "emit" prefix is deprecated.
        LOG("Attack Executed !");
        ^----------------------^
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/test/attacker_test.sol:42:9: Warning: Invoking events without "emit" prefix is deprecated.
        LOG("Other User Can BID, DOS Attack not successful.");
        ^---------------------------------------------------^
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/test/attacker_test.sol:46:9: Warning: Invoking events without "emit" prefix is deprecated.
        LOG1(address(usr).balance);
        ^------------------------^



[0m[0m
[0m  attacker_test[0m
  [32m  ✓[0m[90m testAttackerDeployment[0m[33m (53ms)[0m
  [32m  ✓[0m[90m testAttackExec[0m[33m (54ms)[0m
  [31m  1) testOtherUserBid[0m
    > No events were emitted
  [32m  ✓[0m[90m testAttackSuccess[0m


[92m [0m[32m 3 passing[0m[90m (7s)[0m
[31m  1 failing[0m

[0m  1) attacker_test
       testOtherUserBid:
[0m[31m     Error: Returned error: VM Exception while processing transaction: revert[0m[90m
     at PromiEvent (/usr/local/lib/node_modules/truffle/build/webpack:/packages/contract/lib/promievent.js:6:1)
      at TruffleContract.testOtherUserBid (/usr/local/lib/node_modules/truffle/build/webpack:/packages/contract/lib/execute.js:157:1)
      at abstraction.deployed.then.deployed (/usr/local/lib/node_modules/truffle/build/webpack:/packages/core/lib/testing/soliditytest.js:97:1)
      at <anonymous>
      at process._tickCallback (internal/process/next_tick.js:188:7)
[0m
Using network 'development'.


Compiling your contracts...
===========================
> Compiling ./test/auction_test.sol

    > compilation warnings encountered:

/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/Migrations.sol:7:3: Warning: Defining constructors as functions with the same name as the contract is deprecated. Use "constructor(...) { ... }" instead.
  function Migrations() public {
  ^ (Relevant source part starts here and spans across multiple lines).
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/auction.sol:11:5: Warning: Defining constructors as functions with the same name as the contract is deprecated. Use "constructor(...) { ... }" instead.
    function auction() public onlyUninitialised {
    ^ (Relevant source part starts here and spans across multiple lines).
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/attacker.sol:8:5: Warning: Defining constructors as functions with the same name as the contract is deprecated. Use "constructor(...) { ... }" instead.
    function attacker() public payable {}
    ^-----------------------------------^
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/user.sol:8:5: Warning: Defining constructors as functions with the same name as the contract is deprecated. Use "constructor(...) { ... }" instead.
    function user() public payable {}
    ^-------------------------------^
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/contracts/auction.sol:11:31: Warning: Modifier-style base constructor call without arguments.
    function auction() public onlyUninitialised {
                              ^---------------^
,/home/harmanw/Desktop/d27/code/Blockchain_labs/Auction_DOS/autograder/grader/testspace/test/auction_test.sol:36:9: Warning: Invoking events without "emit" prefix is deprecated.
        LOG("Attack Executed !");
        ^----------------------^



[0m[0m
[0m  auction_test[0m
  [32m  ✓[0m[90m testAttackerDeployment[0m[33m (46ms)[0m
  [32m  ✓[0m[90m testAttackExec[0m[33m (50ms)[0m
  [32m  ✓[0m[90m testOtherUserBid[0m[33m (40ms)[0m


[92m [0m[32m 3 passing[0m[90m (7s)[0m
